--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     <title>React App</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Sans&family=Neucha&display=swap"
       rel="stylesheet"
